fixed flickering

--- a/src/components/EventCard/event-card-styles.scss
+++ b/src/components/EventCard/event-card-styles.scss
@@ -2,15 +2,12 @@
 
 .event-card-wrapper {
   flex-basis: calc((100% / 5) - 0.5% - 2px);
-  height: 340px;
-  overflow: hidden;
-  border: 1px solid rgb(185,185,185);
   margin: 0.25%;
-  border-radius: 7px;
   position: relative;
   transition: transform 0.5s, box-shadow 0.5s;
   z-index: 1;
   background-color: rgb(255,255,255);
+  border-radius: 5px;
   cursor: pointer;
   &:hover {
     transform: scale(1.1);
@@ -29,6 +26,7 @@
   }
   .event-card {
     img {
+      display: block;
       width: 100%;
       height: 150px;
       object-fit:cover;
@@ -36,9 +34,16 @@
       border-top-right-radius: 5px;
     }
     ul {
+      height: 159px;
+      overflow: hidden;
+      border: 1px solid rgb(185,185,185);
+      border-top: none;
+      border-bottom-right-radius: 5px;
+      border-bottom-left-radius: 5px;
       padding: 15px;
       font-family: $textFontFamily;
       background-color: rgb(255,255,255);
+      transform: translate3d(0,0,0);
       li {
         @include font-size(15);
         font-weight: bold;
@@ -52,16 +57,19 @@
           line-height: 1.2rem;
         }
       }
+      .event-card-lighten-bottom {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        background: linear-gradient(to top, rgba(255,255,255,1) 0%,rgba(255,255,255,0.99) 15%,rgba(255,255,255,0.01) 50%,rgba(255,255,255,0) 100%);
+      }
     }
-  }
-  .event-card-lighten-bottom {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: linear-gradient(to top, rgba(255,255,255,1) 0%,rgba(255,255,255,0.99) 8%,rgba(255,255,255,0.01) 32%,rgba(255,255,255,0) 100%);
-    span {
+    .event-card-lighten-ontop {
+      transform: translate3d(0,0,0);
+      z-index: 2;
       position: absolute;
       bottom: 10px;
       width: 100%;
