--- a/src/components/Header/header-styles.scss
+++ b/src/components/Header/header-styles.scss
@@ -1,30 +1,32 @@
 @import '../../styles/shared-styles.scss';
 
 header {
-  height: calc(50.095vh);
+  height: calc(24.55vw);
   background: url('../../images/background-3.jpg');
   background-size: cover;
   box-shadow: 0 1px 4px 0 rgba(0,0,0,0.75);
   background-position: center;
   display: flex;
   @media only screen and (max-width: 426px) {
-    height: calc(25vh);
+    height: calc(33vh);
   }
   h1 {
     display: block;
-    max-width: 30%;
+    max-width: 100%;
     margin: auto;
     font-family: $headerImageFontFamily;
     font-weight: bold;
     text-align: center;
-    font-size: 8vw;
+    @include font-size(110);
     color: rgb(255,255,255);
     text-shadow: 0px 4px 3px rgba(0,0,0,0.5),
                  0px 8px 13px rgba(0,0,0,0.2),
                  0px 18px 23px rgba(0,0,0,0.2);
+  @media only screen and (max-width: 768px) {
+    @include font-size(80);
+  }
   @media only screen and (max-width: 426px) {
-    font-size: 16vw;
-    max-width: 100%;
+    @include font-size(50);
   }
   }
 }
